<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>org.cometd</groupId>
    <artifactId>cometd-project</artifactId>
    <packaging>pom</packaging>
    <name>CometD</name>
    <version>2.4.3</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jetty-version>7.6.4.v20120524</jetty-version>
        <jetty-plugin-version>${jetty-version}</jetty-plugin-version>
        <slf4j-version>1.6.4</slf4j-version>
        <spring-version>3.1.1.RELEASE</spring-version>
    </properties>

    <url>http://cometd.org</url>
    <description>
        The CometD project is a scalable web messaging bus that uses WebSocket
        and HTTP AJAX push technology patterns known as "Comet" techniques
    </description>

    <inceptionYear>2008</inceptionYear>

    <issueManagement>
        <system>jira</system>
        <url>http://bugs.cometd.org</url>
    </issueManagement>

    <mailingLists>
        <mailingList>
            <name>CometD Dev List</name>
            <archive>http://groups.google.com/group/cometd-dev/</archive>
        </mailingList>
        <mailingList>
            <name>CometD User List</name>
            <archive>http://groups.google.com/group/cometd-users/</archive>
        </mailingList>
    </mailingLists>

    <developers>
        <developer>
            <id>gregw</id>
            <name>Greg Wilkins</name>
            <email>gregw@webtide.com</email>
            <url>http://www.mortbay.com/mortbay/people/gregw</url>
            <organization>Webtide</organization>
            <organizationUrl>http://www.webtide.com</organizationUrl>
        </developer>
        <developer>
            <id>sbordet</id>
            <name>Simone Bordet</name>
            <email>sbordet@webtide.com</email>
            <organization>Webtide</organization>
            <organizationUrl>http://www.webtide.com</organizationUrl>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>Apache License Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
        <license>
            <name>The New BSD License</name>
            <url>http://www.opensource.org/licenses/bsd-license.html</url>
        </license>
        <license>
            <name>The Academic Free License, v. 2.1</name>
            <url>http://opensource-definition.org/licenses/afl-2.1.html</url>
        </license>
    </licenses>

    <distributionManagement>
        <repository>
            <id>oss.sonatype.org</id>
            <name>CometD Maven2 Repository</name>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
        </repository>
        <snapshotRepository>
            <id>oss.sonatype.org</id>
            <name>CometD Maven2 Snapshot Repository</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

    <scm>
        <connection>scm:git:git://github.com/cometd/cometd.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/cometd/cometd.git</developerConnection>
        <url>https://github.com/cometd/cometd</url>
    </scm>

    <organization>
        <name>Dojo Foundation</name>
        <url>http://dojofoundation.org</url>
    </organization>

    <modules>
        <module>cometd-archetypes</module>
        <module>cometd-java</module>
        <module>cometd-javascript</module>
        <module>cometd-demo</module>
        <module>cometd-distribution</module>
    </modules>

    <profiles>
        <profile>
            <id>osgi</id>
            <activation>
                <jdk>[1.6,)</jdk>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.felix</groupId>
                        <artifactId>maven-bundle-plugin</artifactId>
                        <extensions>true</extensions>
                        <configuration>
                            <archive>
                                <addMavenDescriptor>true</addMavenDescriptor>
                            </archive>
                            <supportedProjectTypes>
                                <supportedProjectType>jar</supportedProjectType>
                                <supportedProjectType>war</supportedProjectType>
                            </supportedProjectTypes>
                            <instructions>
                                <Bundle-Vendor>${project.organization.name}</Bundle-Vendor>
                                <Bundle-ContactAddress>${project.url}</Bundle-ContactAddress>
                                <Bundle-Description>${project.description}</Bundle-Description>
                                <Bundle-DocURL>http://docs.cometd.org</Bundle-DocURL>
                                <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                                <Bundle-Version>${project.version}</Bundle-Version>
                                <Import-Package>org.eclipse.jetty.*;version="[7.6,9)",*</Import-Package>
                                <mode>development</mode>
                                <url>${project.url}</url>
                                <implementation-version>${project.version}</implementation-version>
                                <package>org.cometd</package>
                            </instructions>
                        </configuration>
                        <executions>
                            <execution>
                                <id>osgi</id>
                                <goals>
                                    <goal>manifest</goal>
                                </goals>
                                <inherited>true</inherited>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <artifactId>maven-jar-plugin</artifactId>
                        <configuration>
                            <archive>
                                <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
                            </archive>
                        </configuration>
                    </plugin>
                    <plugin>
                        <artifactId>maven-war-plugin</artifactId>
                        <configuration>
                            <archive>
                                <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
                            </archive>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>sign-artifacts</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>true</value>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <build>
        <defaultGoal>install</defaultGoal>
        <plugins>
            <plugin>
                <artifactId>maven-enforcer-plugin</artifactId>
                <executions>
                    <execution>
                        <id>enforce-maven-version</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>[3.0,)</version>
                                </requireMavenVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.5</source>
                    <target>1.5</target>
                    <showDeprecation>true</showDeprecation>
                    <showWarnings>true</showWarnings>
                    <compilerArgument>-Xlint:all,-serial,-unchecked</compilerArgument>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-release-plugin</artifactId>
                <configuration>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                    <goals>deploy</goals>
                    <preparationGoals>clean install</preparationGoals>
                    <mavenExecutorId>forked-path</mavenExecutorId>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-archetype-plugin</artifactId>
                    <version>2.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>2.3</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>2.4.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>2.3.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>2.4</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>2.7</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <version>1.0.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-gpg-plugin</artifactId>
                    <version>1.4</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>2.3.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>2.4</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>2.8.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>2.2.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>2.5</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>3.0</version>
                    <configuration>
                        <reportPlugins>
                            <reportPlugin>
                                <groupId>org.codehaus.mojo</groupId>
                                <artifactId>findbugs-maven-plugin</artifactId>
                            </reportPlugin>
                        </reportPlugins>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>2.1.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.9</version>
                    <configuration>
                        <argLine>-showversion -Xmx1g -Xms1g -XX:+PrintGCDetails -XX:+PrintCommandLineFlags -XX:MaxGCPauseMillis=1000</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>2.1.1</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>1.2.1</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>findbugs-maven-plugin</artifactId>
                    <version>2.4.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.felix</groupId>
                    <artifactId>maven-bundle-plugin</artifactId>
                    <version>2.3.5</version>
                </plugin>
                <plugin>
                    <groupId>org.mortbay.jetty</groupId>
                    <artifactId>jetty-maven-plugin</artifactId>
                    <version>${jetty-plugin-version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j-version}</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.10</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-simple</artifactId>
                <version>${slf4j-version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>


</project>
